--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module designed to get local eths on IPv4 networks",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node app.js"
   },
   "repository": {
     "type": "git",
