--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module designed to get local eths on IPv4 networks",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
